--- a/my-super-post.html
+++ b/my-super-post.html
@@ -43,22 +43,10 @@
 
     <div class="content-wrapper container-fluid">
         <div class="content fixed-head-top">
-            <!--
-            <div class="page-header">
-                <h1>NULLNE <small>[archive]</small></h1>
-            </div>
-            -->
-<h2>2010</h2>
-<h3>December</h3>
-<ul>
-	<li><a href="review/2010/my-first-review.html">My First Review</a></li>
-	<li><a href="python/2010/my-super-post.html">My super title</a></li>
-</ul>
-<h2>2014</h2>
-<h3>December</h3>
-<ul>
-	<li><a href="web/2014/arp protocol.html">arp title</a></li>
-</ul>
+	<div class='page'>
+		<div class="page-header"><h1>About</h1></div>
+		<div><p>This is the content of my super blog post.</p></div>
+	</div>
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
