--- a/categories.html
+++ b/categories.html
@@ -8,13 +8,13 @@
 
 	<!-- HTML5 shim, for IE6-8 support of HTML elements -->
 	<!--[if lt IE 9]>
-		<script src="nullne.com/theme/html5.js"></script>
+		<script src="/theme/html5.js"></script>
 	<![endif]-->
 
 	<!-- Styles -->
-	<link href="nullne.com/theme/bootstrap.min.css" rel="stylesheet">
-	<link href="nullne.com/theme/local.css" rel="stylesheet">
-	<link href="nullne.com/theme/pygments.css" rel="stylesheet">
+	<link href="/theme/bootstrap.min.css" rel="stylesheet">
+	<link href="/theme/local.css" rel="stylesheet">
+	<link href="/theme/pygments.css" rel="stylesheet">
 
 	<!-- Feeds -->
 
@@ -26,9 +26,9 @@
 	<div class="topbar">
 	  <div class="topbar-inner">
 		<div class="container-fluid">
-		  <a class="brand" href="nullne.com/">NULLNE</a>
+		  <a class="brand" href="/">NULLNE</a>
 			<ul class="nav">
-						<li><a href="nullne.com/my-super-post.html">About</a></li>
+						<li><a href="/my-super-post.html">About</a></li>
 			</ul>
             <div class="nav-collapse collapse">
                 <form class="navbar-search pull-right">
@@ -49,9 +49,9 @@
             </div>
             -->
 <ul>
-	<li><a href="nullne.com/category/python.html">Python</a></li>
-	<li><a href="nullne.com/category/review.html">Review</a></li>
-	<li><a href="nullne.com/category/web.html">Web</a></li>
+	<li><a href="/category/python.html">Python</a></li>
+	<li><a href="/category/review.html">Review</a></li>
+	<li><a href="/category/web.html">Web</a></li>
 </ul>
         </div>
         <div class="push"></div>
@@ -63,17 +63,17 @@
                 <div class="span4">
                     <h3>Site</h3>
                     <ul>
-                        <li><a href="nullne.com/tags.html">Tags</a></li>
-                        <li><a href="nullne.com/archives.html">Archives</a></li>
-                        <li><a href="nullne.com/rss.html">RSS</a></li>
+                        <li><a href="/tags.html">Tags</a></li>
+                        <li><a href="/archives.html">Archives</a></li>
+                        <li><a href="/rss.html">RSS</a></li>
                     </ul>
                 </div>
                 <div class="span4">
                     <h3>Category</h3>
                     <ul>
-                        <li><a href="nullne.com/category/python.html">Python</a></li>
-                        <li><a href="nullne.com/category/review.html">Review</a></li>
-                        <li><a href="nullne.com/category/web.html">Web</a></li>
+                        <li><a href="/category/python.html">Python</a></li>
+                        <li><a href="/category/review.html">Review</a></li>
+                        <li><a href="/category/web.html">Web</a></li>
                     </ul>
                 </div>
                 <div class="span4">
