Travis build 13 pushed to Github Pages

--- a/search.html
+++ b/search.html
@@ -47,21 +47,32 @@
         <div class="content fixed-head-top">
             <!--
             <div class="page-header">
-                <h1>NULLNE <small>publishing</small></h1>
+                <h1>Search - NULLNE
+</h1>
             </div>
             -->
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js">
+</script>
+<script type="text/javascript" src="/theme/tipuesearch/tipuesearch_set.js"></script>
+<script type="text/javascript" src="/theme/tipuesearch/tipuesearch.min.js"></script>
 
-<div class='article'>
-	<h2><a class="more" href="/python/2010/my-super-post.html">My super title</a></h2>
-	<div class=""><p>This is the content of my super blog post.
-Following is a review of my favorite mechanical keyboard.
-nice
-<a href="/downloads/resume-en.pdf">简历</a>
-<a href="/downloads/resume-en.pdf">resume-en</a></p> <a class="btn primary xsmall pull-right" href="/python/2010/my-super-post.html">more…</a>
-	</div>
-</div>	
+<script>
+$(document).ready(function() {
+     $('#tipue_search_input').tipuesearch({
+         'show': 10,
+         'mode': 'json',
+         'contentLocation': '/tipuesearch_content.json'
+     });
+});
+</script>
 
+<section id="content" class="body">
 
+<div align="center"><input type="text" size="60" id="tipue_search_input">
+<input type="button" id="tipue_search_button" value="Search"></div>
+<div id="tipue_search_content"></div>
+
+</section>
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
