--- a/archives.html
+++ b/archives.html
@@ -15,6 +15,7 @@
 	<link href="/theme/bootstrap.min.css" rel="stylesheet">
 	<link href="/theme/local.css" rel="stylesheet">
 	<link href="/theme/pygments.css" rel="stylesheet">
+    <link href="/theme/tipuesearch/tipuesearch.css" rel="stylesheet" >
     <link rel="shortcut icon" href="/theme/images/icons/favicon.ico" >
 
 	<!-- Feeds -->
@@ -32,8 +33,8 @@
 						<li><a href="/my-super-post.html">About</a></li>
 			</ul>
             <div class="nav-collapse collapse">
-                <form class="navbar-search pull-right">
-                    <input type="text" class="search-query" placeholder="Search">
+                <form class="navbar-search pull-right" id="searchform" action="/search" onsubmit="return (this.elements['q'].value.length > 0)">
+                    <input type="text" name="q" class="search-query" placeholder="Search">
                 </form>
             </div>
 		</div>
@@ -52,7 +53,6 @@
 <h2>2010</h2>
 <h3>December</h3>
 <ul>
-	<li><a href="review/2010/my-first-review.html">My First Review</a></li>
 	<li><a href="python/2010/my-super-post.html">My super title</a></li>
 </ul>
 <h2>2014</h2>
@@ -79,7 +79,6 @@
                     <h3>Category</h3>
                     <ul>
                         <li><a href="/category/python.html">Python</a></li>
-                        <li><a href="/category/review.html">Review</a></li>
                         <li><a href="/category/web.html">Web</a></li>
                     </ul>
                 </div>
