--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link href="/theme/bootstrap.min.css" rel="stylesheet">
 	<link href="/theme/local.css" rel="stylesheet">
 	<link href="/theme/pygments.css" rel="stylesheet">
+    <link href="/theme/tipuesearch/tipuesearch.css" rel="stylesheet" >
     <link rel="shortcut icon" href="/theme/images/icons/favicon.ico" >
 
 	<!-- Feeds -->
@@ -32,8 +33,8 @@
 						<li><a href="/my-super-post.html">About</a></li>
 			</ul>
             <div class="nav-collapse collapse">
-                <form class="navbar-search pull-right">
-                    <input type="text" class="search-query" placeholder="Search">
+                <form class="navbar-search pull-right" id="searchform" action="/search" onsubmit="return (this.elements['q'].value.length > 0)">
+                    <input type="text" name="q" class="search-query" placeholder="Search">
                 </form>
             </div>
 		</div>
@@ -93,12 +94,6 @@
 	</div>
 </div>	
 <div class='article'>
-	<h2><a class="more" href="/review/2010/my-first-review.html">My First Review</a></h2>
-	<div class=""><p>Following is a review of my favorite mechanical keyboard.
-nice</p> <a class="btn primary xsmall pull-right" href="/review/2010/my-first-review.html">more…</a>
-	</div>
-</div>	
-<div class='article'>
 	<h2><a class="more" href="/python/2010/my-super-post.html">My super title</a></h2>
 	<div class=""><p>This is the content of my super blog post.
 Following is a review of my favorite mechanical keyboard.
@@ -128,7 +123,6 @@ nice
                     <h3>Category</h3>
                     <ul>
                         <li><a href="/category/python.html">Python</a></li>
-                        <li><a href="/category/review.html">Review</a></li>
                         <li><a href="/category/web.html">Web</a></li>
                     </ul>
                 </div>
