Travis build 14 pushed to Github Pages

--- a/my-super-post.html
+++ b/my-super-post.html
@@ -43,7 +43,7 @@
 
     <div class="wrapper">
 
-    <div class="content-wrapper container-fluid">
+    <div class="content-wrapper container">
         <div class="content fixed-head-top">
 	<div class='page'>
 		<div class="page-header"><h1>About</h1></div>
@@ -52,6 +52,7 @@
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
+
 
     <footer class="">
         <div class="container">
