--- a/tags.html
+++ b/tags.html
@@ -43,13 +43,11 @@
 
     <div class="wrapper">
 
-    <div class="content-wrapper container-fluid">
+    <div class="content-wrapper container">
         <div class="content fixed-head-top">
-            <!--
             <div class="page-header">
                 <h1>NULLNE <small>[tags]</small></h1>
             </div>
-            -->
 <ul>
 	<li><a href="/tag/arp.html">Arp</a></li>
 	<li><a href="/tag/pelican.html">pelican</a></li>
@@ -59,6 +57,7 @@
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
+
 
     <footer class="">
         <div class="container">
