--- a/archives.html
+++ b/archives.html
@@ -43,13 +43,11 @@
 
     <div class="wrapper">
 
-    <div class="content-wrapper container-fluid">
+    <div class="content-wrapper container">
         <div class="content fixed-head-top">
-            <!--
             <div class="page-header">
                 <h1>NULLNE <small>[archive]</small></h1>
             </div>
-            -->
 <h2>2010</h2>
 <h3>December</h3>
 <ul>
@@ -63,6 +61,7 @@
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
+
 
     <footer class="">
         <div class="container">
