--- a/authors.html
+++ b/authors.html
@@ -43,13 +43,11 @@
 
     <div class="wrapper">
 
-    <div class="content-wrapper container-fluid">
+    <div class="content-wrapper container">
         <div class="content fixed-head-top">
-            <!--
             <div class="page-header">
                 <h1>NULLNE - Authors</h1>
             </div>
-            -->
     <h1>Authors on NULLNE</h1>
 
     <ul>        <li><a href="/author/alexis-metaireau.html">Alexis Metaireau</a> (1)</li>
@@ -59,6 +57,7 @@
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
+
 
     <footer class="">
         <div class="container">
