--- a/categories.html
+++ b/categories.html
@@ -43,13 +43,11 @@
 
     <div class="wrapper">
 
-    <div class="content-wrapper container-fluid">
+    <div class="content-wrapper container">
         <div class="content fixed-head-top">
-            <!--
             <div class="page-header">
                 <h1>NULLNE <small>[categories]</small></h1>
             </div>
-            -->
 <ul>
 	<li><a href="/category/python.html">Python</a></li>
 	<li><a href="/category/web.html">Web</a></li>
@@ -57,6 +55,7 @@
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
+
 
     <footer class="">
         <div class="container">
