--- a/index.html
+++ b/index.html
@@ -43,13 +43,11 @@
 
     <div class="wrapper">
 
-    <div class="content-wrapper container-fluid">
+    <div class="content-wrapper container">
         <div class="content fixed-head-top">
-            <!--
             <div class="page-header">
                 <h1> NULLNE </h1>
             </div>
-            -->
 
 <div class='article'>
 	<h2><a class="more" href="/web/2014/arp protocol.html">arp title</a></h2>
@@ -107,6 +105,7 @@ nice
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
+
 
     <footer class="">
         <div class="container">
