--- a/search.html
+++ b/search.html
@@ -43,14 +43,12 @@
 
     <div class="wrapper">
 
-    <div class="content-wrapper container-fluid">
+    <div class="content-wrapper container">
         <div class="content fixed-head-top">
-            <!--
             <div class="page-header">
                 <h1>Search - NULLNE
 </h1>
             </div>
-            -->
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js">
 </script>
 <script type="text/javascript" src="/theme/tipuesearch/tipuesearch_set.js"></script>
@@ -76,6 +74,7 @@ $(document).ready(function() {
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
+
 
     <footer class="">
         <div class="container">
