--- a/about.html
+++ b/about.html
@@ -47,7 +47,8 @@
         <div class="content fixed-head-top">
 	<div class='page'>
 		<div class="page-header"><h1>About</h1></div>
-		<div><p>This is the content of my super blog post.</p></div>
+		<div><p><a href="{filename}/million/resume-ch.pdf">简历</a>
+<a href="{filename}/million/resume-en.pdf">Resume</a></p></div>
 	</div>
         </div>
         <div class="push"></div>
