--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-
+<h1>要么自己找，要么<a href="/">滚回去</a></h1>
   <img src="/theme/images/404.jpg" alt="Page Not Found (404)." style="position: absolute; left: 50%; top: 50%; margin-left: -285px; margin-top: -190px;">
 
 </body>
