--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 	<div class='page'>
 		<div class="page-header"><h1>About</h1></div>
 		<div><p><a href="{filename}/million/resume-ch.pdf">简历</a>
-<a href="{filename}/million/resume-en.pdf">Resume</a></p></div>
+<a href="/million/resume-en.pdf">Resume</a></p></div>
 	</div>
         </div>
         <div class="push"></div>
