--- a/about.html
+++ b/about.html
@@ -75,8 +75,9 @@
                 <div class="span4">
                     <h3>Blogroll</h3>
                     <ul>
-                        <li><a href="http://getpelican.com/">Pelican</a></li>
-                        <li><a href="http://python.org/">Python.org</a></li>
+                        <li><a href="http://zonca.github.io/">Zonca</a></li>
+                        <li><a href="http://.moparx.com/">Moparx</a></li>
+                        <li><a href="http://blog.friparia.com/">Friparia</a></li>
                     </ul>
                 </div>
                 <div class="social span4">
