--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         <div class="content fixed-head-top">
 	<div class='page'>
 		<div class="page-header"><h1>About</h1></div>
-		<div><p><a href="{filename}/million/resume-ch.pdf">简历</a>
+		<div><p><a href="/million/resume-ch.pdf">简历</a>
 <a href="/million/resume-en.pdf">Resume</a></p></div>
 	</div>
         </div>
