--- a/about.html
+++ b/about.html
@@ -8,15 +8,19 @@
 
 	<!-- HTML5 shim, for IE6-8 support of HTML elements -->
 	<!--[if lt IE 9]>
-		<script src="/theme/html5.js"></script>
+		<script src="/theme/js/html5.js"></script>
 	<![endif]-->
 
+    <script src="/theme/js/jquery-2.1.1.min.js"></script>
+    <script src="/theme/js/bootstrap.min.js"></script>
+
 	<!-- Styles -->
-	<link href="/theme/bootstrap.min.css" rel="stylesheet">
-	<link href="/theme/local.css" rel="stylesheet">
-	<link href="/theme/pygments.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/theme/img/icons/fav.ico" >
+
+	<link href="/theme/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/theme/css/local.css" rel="stylesheet">
+	<link href="/theme/css/pygments.css" rel="stylesheet">
     <link href="/theme/tipuesearch/tipuesearch.css" rel="stylesheet" >
-    <link rel="shortcut icon" href="/theme/images/icons/fav.ico" >
 
 	<!-- Feeds -->
 
@@ -26,25 +30,41 @@
 <script>var _gaq=[['_setAccount','UA-56583262-1'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'))</script>
 </head>
 <body>
-	<div class="topbar">
-	  <div class="topbar-inner">
-		<div class="container-fluid">
-		  <a class="brand" href="/">NULLNE</a>
-			<ul class="nav">
-						<li><a href="/about.html">About</a></li>
-			</ul>
-            <div class="nav-collapse collapse">
-                <form class="navbar-search pull-right" id="searchform" action="/search" onsubmit="return (this.elements['q'].value.length > 0)">
-                    <input type="text" name="q" class="search-query" placeholder="Search">
-                </form>
+
+    <div class="navbar navbar-fixed-top navbar-inverse">
+        <div class="navbar-inner">
+            <div class="container">
+
+                <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar">nice</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+
+                <!-- Be sure to leave the brand out there if you want it shown -->
+                <a class="brand" href="/">NULLNE</a>
+
+                <!-- Everything you want hidden at 940px or less, place within here -->
+                <div class="nav-collapse collapse">
+
+                <ul class="nav">
+
+                        <li><a href="/about.html">About</a></li>
+                </ul>
+                    <!-- .nav, .navbar-search, .navbar-form, etc -->
+                    <form class="navbar-search pull-right" id="searchform" action="/search" onsubmit="return (this.elements['q'].value.length > 0)">
+                        <input type="text" name="q" class="search-query" placeholder="Search">
+                    </form>
+                </div>
+
             </div>
-		</div>
-	  </div>
-	</div>
+        </div>
+    </div>
 
     <div class="wrapper">
 
-    <div class="content-wrapper container">
+    <div class="container content-wrapper">
         <div class="content fixed-head-top">
 	<div class='page'>
 		<div class="page-header"><h1>About</h1></div>
@@ -59,38 +79,38 @@
     <footer class="">
         <div class="container">
             <div class="row">
-                <div class="span4">
+               <div class="span3">
                     <h3>Site</h3>
-                    <ul>
-                        <li><a href="/tags.html">Tags</a></li>
-                        <li><a href="/archives.html">Archives</a></li>
-                        <li><a href="/rss.html">RSS</a></li>
+                    <ul class="unstyled">
+                        <li><a href="/tags.html"><i class="icon-tags"></i>&nbsp;Tags</a></li>
+                        <li><a href="/archives.html"><i class="icon-list-alt"></i>&nbsp;Archives</a></li>
+                        <li><a href="/rss.html"><i class="icon-star-empty"></i>&nbsp;RSS</a></li>
                     </ul>
                 </div>
-                <div class="span4">
+                <div class="span3">
                     <h3>Category</h3>
                     <ul>
                         <li><a href="/category/web.html">Web</a></li>
                     </ul>
                 </div>
-                <div class="span4">
+                <div class="span3">
                     <h3>Blogroll</h3>
-                    <ul>
-                        <li><a href="http://zonca.github.io/">Zonca</a></li>
-                        <li><a href="http://.moparx.com/">Moparx</a></li>
-                        <li><a href="http://blog.friparia.com/">Friparia</a></li>
+                    <ul class="unstyled">
+                        <li><a href="http://zonca.github.io/"><i class="icon-user"></i>&nbsp;Zonca</a></li>
+                        <li><a href="http://.moparx.com/"><i class="icon-user"></i>&nbsp;Moparx</a></li>
+                        <li><a href="http://blog.friparia.com/"><i class="icon-user"></i>&nbsp;Friparia</a></li>
                     </ul>
                 </div>
-                <div class="social span4">
+                <div class="social span3">
                     <h3>Social</h3>
-                    <ul style="list-style:none">
+                    <ul class="unstyled">
                         <li><a href="https://github.com/nullne">Github</a></li>
                         <li><a href="http://weibo.com/nullne">Weibo</a></li>
                     </ul>
                 </div>
             </div>
-            <p class="copyleft">&copy; nullne 2013-2014</p>
         </div>
+        <p class="copyleft">&copy; nullne 2013-2014</p>
     </footer>
     </div><!--wrapper-->
 </body>
