--- a/about.html
+++ b/about.html
@@ -105,7 +105,9 @@
                     <h3>Social</h3>
                     <ul class="unstyled">
                         <li><a href="https://github.com/nullne">Github</a></li>
-                        <li><a href="http://weibo.com/nullne">Weibo</a></li>
+                        <li><a href="https://www.linkedin.com/pub/le-yu/89/980/1a5">LinkedIn</a></li>
+                        <li><a href="http://www.douban.com/people/nullnes/">豆瓣</a></li>
+                        <li><a href="http://weibo.com/nullne">微博</a></li>
                     </ul>
                 </div>
             </div>
