Travis build 29 pushed to Github Pages

--- a/search.html
+++ b/search.html
@@ -90,8 +90,9 @@ $(document).ready(function() {
 
 <section id="content" class="body">
 
-<div align="center"><input type="text" size="60" id="tipue_search_input">
-<input type="button" id="tipue_search_button" value="Search"></div>
+<div align="center">
+<input type="text" size="60" id="tipue_search_input" class="input-medium search-query">
+<input type="button" id="tipue_search_button" class="btn" value="Search"></div>
 <div id="tipue_search_content"></div>
 
 </section>
