Travis build 30 pushed to Github Pages

--- a/archives.html
+++ b/archives.html
@@ -73,6 +73,10 @@
             </div>
             -->
 <h2>2014</h2>
+<h3>November</h3>
+<ul>
+	<li><a href="suo-sui/2014/build-and-remember-continued.html">建站续，附乱七八糟</a></li>
+</ul>
 <h3>December</h3>
 <ul>
 	<li><a href="web/2014/ARP-protocol.html">ARP protocol analysis</a></li>
@@ -96,6 +100,7 @@
                 <div class="span3">
                     <h3>Category</h3>
                     <ul>
+                        <li><a href="/category/suo-sui.html">琐碎</a></li>
                         <li><a href="/category/web.html">Web</a></li>
                     </ul>
                 </div>
