--- a/categories.html
+++ b/categories.html
@@ -73,6 +73,7 @@
             </div>
             -->
 <ul>
+	<li><a href="/category/suo-sui.html">琐碎</a></li>
 	<li><a href="/category/web.html">Web</a></li>
 </ul>
         </div>
@@ -94,6 +95,7 @@
                 <div class="span3">
                     <h3>Category</h3>
                     <ul>
+                        <li><a href="/category/suo-sui.html">琐碎</a></li>
                         <li><a href="/category/web.html">Web</a></li>
                     </ul>
                 </div>
