--- a/search.html
+++ b/search.html
@@ -115,6 +115,7 @@ $(document).ready(function() {
                 <div class="span3">
                     <h3>Category</h3>
                     <ul>
+                        <li><a href="/category/suo-sui.html">琐碎</a></li>
                         <li><a href="/category/web.html">Web</a></li>
                     </ul>
                 </div>
