--- a/tags.html
+++ b/tags.html
@@ -74,6 +74,8 @@
             -->
 <ul>
 	<li><a href="/tag/arp.html">Arp</a></li>
+	<li><a href="/tag/blog.html">blog</a></li>
+	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
 	<li><a href="/tag/wireshark.html">wireshark</a></li>
 </ul>
         </div>
@@ -95,6 +97,7 @@
                 <div class="span3">
                     <h3>Category</h3>
                     <ul>
+                        <li><a href="/category/suo-sui.html">琐碎</a></li>
                         <li><a href="/category/web.html">Web</a></li>
                     </ul>
                 </div>
