春宵一刻值34千金

--- a/archives.html
+++ b/archives.html
@@ -75,6 +75,7 @@
 <h2>2014</h2>
 <h3>November</h3>
 <ul>
+	<li><a href="web/2014/real-attack-show-wifi-vulnerability.html">WIFI 热点欺骗</a></li>
 	<li><a href="suo-sui/2014/build-and-remember-continued.html">建站续，附乱七八糟</a></li>
 </ul>
 <h3>December</h3>
