--- a/tags.html
+++ b/tags.html
@@ -74,8 +74,10 @@
             -->
 <ul>
 	<li><a href="/tag/arp.html">Arp</a></li>
+	<li><a href="/tag/wifi.html">WIFI</a></li>
 	<li><a href="/tag/blog.html">blog</a></li>
 	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
+	<li><a href="/tag/linux.html">Linux</a></li>
 	<li><a href="/tag/wireshark.html">wireshark</a></li>
 </ul>
         </div>
