春宵一刻值35千金

--- a/categories.html
+++ b/categories.html
@@ -73,8 +73,8 @@
             </div>
             -->
 <ul>
-	<li><a href="/category/suo-sui.html">琐碎</a></li>
 	<li><a href="/category/web.html">Web</a></li>
+	<li><a href="/category/suo-sui.html">琐碎</a></li>
 </ul>
         </div>
         <div class="push"></div>
@@ -95,15 +95,15 @@
                 <div class="span3">
                     <h3>Category</h3>
                     <ul>
-                        <li><a href="/category/suo-sui.html">琐碎</a></li>
                         <li><a href="/category/web.html">Web</a></li>
+                        <li><a href="/category/suo-sui.html">琐碎</a></li>
                     </ul>
                 </div>
                 <div class="span3">
                     <h3>Blogroll</h3>
                     <ul class="unstyled">
                         <li><a href="http://zonca.github.io/"><i class="icon-user"></i>&nbsp;Zonca</a></li>
-                        <li><a href="http://.moparx.com/"><i class="icon-user"></i>&nbsp;Moparx</a></li>
+                        <li><a href="http://moparx.com/"><i class="icon-user"></i>&nbsp;Moparx</a></li>
                         <li><a href="http://blog.friparia.com/"><i class="icon-user"></i>&nbsp;Friparia</a></li>
                     </ul>
                 </div>
