春宵一刻值39千金

--- a/about.html
+++ b/about.html
@@ -93,6 +93,7 @@
                     <ul>
                         <li><a href="/category/web.html">Web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/dairy.html">Dairy</a></li>
                     </ul>
                 </div>
                 <div class="span3">
