--- a/authors.html
+++ b/authors.html
@@ -74,7 +74,7 @@
             -->
     <h1>Authors on NULLNE</h1>
 
-    <ul>        <li><a href="/author/nullne.html">nullne</a> (3)</li>
+    <ul>        <li><a href="/author/nullne.html">nullne</a> (4)</li>
     </ul>
         </div>
         <div class="push"></div>
@@ -97,6 +97,7 @@
                     <ul>
                         <li><a href="/category/web.html">Web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/dairy.html">Dairy</a></li>
                     </ul>
                 </div>
                 <div class="span3">
