--- a/categories.html
+++ b/categories.html
@@ -75,6 +75,7 @@
 <ul>
 	<li><a href="/category/web.html">Web</a></li>
 	<li><a href="/category/suo-sui.html">琐碎</a></li>
+	<li><a href="/category/dairy.html">Dairy</a></li>
 </ul>
         </div>
         <div class="push"></div>
@@ -97,6 +98,7 @@
                     <ul>
                         <li><a href="/category/web.html">Web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/dairy.html">Dairy</a></li>
                     </ul>
                 </div>
                 <div class="span3">
