春宵一刻值43千金

--- a/tags.html
+++ b/tags.html
@@ -76,9 +76,11 @@
 	<li><a href="/tag/arp.html">Arp</a></li>
 	<li><a href="/tag/wifi.html">WIFI</a></li>
 	<li><a href="/tag/work.html">work</a></li>
+	<li><a href="/tag/programming.html">Programming</a></li>
 	<li><a href="/tag/blog.html">blog</a></li>
 	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
 	<li><a href="/tag/linux.html">Linux</a></li>
+	<li><a href="/tag/tutorial.html">Tutorial</a></li>
 	<li><a href="/tag/wireshark.html">wireshark</a></li>
 </ul>
         </div>
@@ -100,8 +102,9 @@
                 <div class="span3">
                     <h3>Category</h3>
                     <ul>
-                        <li><a href="/category/web.html">Web</a></li>
+                        <li><a href="/category/web.html">web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/golang.html">Golang</a></li>
                     </ul>
                 </div>
                 <div class="span3">
