--- a/archives.html
+++ b/archives.html
@@ -88,6 +88,10 @@
 <ul>
 	<li><a href="suo-sui/2015/What-do-you-really-want.html">你到底想要一个什么的工作</a></li>
 </ul>
+<h3>July</h3>
+<ul>
+	<li><a href="golang/2015/first-glance-at-go.html">Golang</a></li>
+</ul>
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
@@ -107,8 +111,9 @@
                 <div class="span3">
                     <h3>Category</h3>
                     <ul>
-                        <li><a href="/category/web.html">Web</a></li>
+                        <li><a href="/category/web.html">web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/golang.html">Golang</a></li>
                     </ul>
                 </div>
                 <div class="span3">
