--- a/authors.html
+++ b/authors.html
@@ -74,7 +74,7 @@
             -->
     <h1>Authors on NULLNE</h1>
 
-    <ul>        <li><a href="/author/nullne.html">nullne</a> (4)</li>
+    <ul>        <li><a href="/author/nullne.html">nullne</a> (5)</li>
     </ul>
         </div>
         <div class="push"></div>
@@ -95,8 +95,9 @@
                 <div class="span3">
                     <h3>Category</h3>
                     <ul>
-                        <li><a href="/category/web.html">Web</a></li>
+                        <li><a href="/category/web.html">web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/golang.html">Golang</a></li>
                     </ul>
                 </div>
                 <div class="span3">
