--- a/categories.html
+++ b/categories.html
@@ -73,8 +73,9 @@
             </div>
             -->
 <ul>
-	<li><a href="/category/web.html">Web</a></li>
+	<li><a href="/category/web.html">web</a></li>
 	<li><a href="/category/suo-sui.html">琐碎</a></li>
+	<li><a href="/category/golang.html">Golang</a></li>
 </ul>
         </div>
         <div class="push"></div>
@@ -95,8 +96,9 @@
                 <div class="span3">
                     <h3>Category</h3>
                     <ul>
-                        <li><a href="/category/web.html">Web</a></li>
+                        <li><a href="/category/web.html">web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/golang.html">Golang</a></li>
                     </ul>
                 </div>
                 <div class="span3">
