--- a/search.html
+++ b/search.html
@@ -115,8 +115,9 @@ $(document).ready(function() {
                 <div class="span3">
                     <h3>Category</h3>
                     <ul>
-                        <li><a href="/category/web.html">Web</a></li>
+                        <li><a href="/category/web.html">web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/golang.html">Golang</a></li>
                     </ul>
                 </div>
                 <div class="span3">
