春宵一刻值45千金

--- a/authors.html
+++ b/authors.html
@@ -74,7 +74,7 @@
             -->
     <h1>Authors on NULLNE</h1>
 
-    <ul>        <li><a href="/author/nullne.html">nullne</a> (5)</li>
+    <ul>        <li><a href="/author/nullne.html">nullne</a> (14)</li>
     </ul>
         </div>
         <div class="push"></div>
@@ -97,6 +97,7 @@
                     <ul>
                         <li><a href="/category/web.html">web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/ssh.html">SSH</a></li>
                         <li><a href="/category/golang.html">Golang</a></li>
                     </ul>
                 </div>
