--- a/tags.html
+++ b/tags.html
@@ -74,14 +74,23 @@
             -->
 <ul>
 	<li><a href="/tag/arp.html">Arp</a></li>
+	<li><a href="/tag/blog.html">blog</a></li>
 	<li><a href="/tag/wifi.html">WIFI</a></li>
+	<li><a href="/tag/key-challenge.html">Key Challenge</a></li>
 	<li><a href="/tag/work.html">work</a></li>
 	<li><a href="/tag/programming.html">Programming</a></li>
-	<li><a href="/tag/blog.html">blog</a></li>
+	<li><a href="/tag/auth.html">Auth</a></li>
+	<li><a href="/tag/rfc.html">RFC</a></li>
+	<li><a href="/tag/tunnel.html">tunnel</a></li>
 	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
+	<li><a href="/tag/ssh.html">SSH</a></li>
+	<li><a href="/tag/agent.html">Agent</a></li>
 	<li><a href="/tag/linux.html">Linux</a></li>
-	<li><a href="/tag/tutorial.html">Tutorial</a></li>
+	<li><a href="/tag/tips.html">tips</a></li>
 	<li><a href="/tag/wireshark.html">wireshark</a></li>
+	<li><a href="/tag/config.html">config</a></li>
+	<li><a href="/tag/tutorial.html">Tutorial</a></li>
+	<li><a href="/tag/anget-hijacking.html">anget hijacking</a></li>
 </ul>
         </div>
         <div class="push"></div>
@@ -104,6 +113,7 @@
                     <ul>
                         <li><a href="/category/web.html">web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/ssh.html">SSH</a></li>
                         <li><a href="/category/golang.html">Golang</a></li>
                     </ul>
                 </div>
