--- a/about.html
+++ b/about.html
@@ -93,6 +93,7 @@
                     <ul>
                         <li><a href="/category/web.html">web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/ssh.html">SSH</a></li>
                         <li><a href="/category/golang.html">Golang</a></li>
                     </ul>
                 </div>
