--- a/search.html
+++ b/search.html
@@ -117,6 +117,7 @@ $(document).ready(function() {
                     <ul>
                         <li><a href="/category/web.html">web</a></li>
                         <li><a href="/category/suo-sui.html">琐碎</a></li>
+                        <li><a href="/category/ssh.html">SSH</a></li>
                         <li><a href="/category/golang.html">Golang</a></li>
                     </ul>
                 </div>
