--- a/archives.html
+++ b/archives.html
@@ -18,6 +18,7 @@
     <link rel="shortcut icon" href="/theme/img/icons/fav.ico" >
 
 	<link href="/theme/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/theme/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/theme/css/local.css" rel="stylesheet">
 	<link href="/theme/css/pygments.css" rel="stylesheet">
     <link href="/theme/tipuesearch/tipuesearch.css" rel="stylesheet" >
@@ -114,7 +115,9 @@
     <footer class="">
         <div class="container-fluid">
             <div class="row">
-               <div class=".col-md-4">
+               <div class="col-md-2">
+               </div>
+               <div class="col-md-3">
                     <h3>Site</h3>
                     <ul class="unstyled">
                         <li><a href="/tags.html"><i class="icon-tags"></i>&nbsp;Tags</a></li>
@@ -122,7 +125,7 @@
                         <li><a href="/all-atom.xml"><i class="icon-star-empty"></i>&nbsp;RSS</a></li>
                     </ul>
                 </div>
-               <div class=".col-md-4">
+               <div class="col-md-3">
                     <h3>Blogroll</h3>
                     <ul class="unstyled">
                         <li><a href="http://zonca.github.io/"><i class="icon-user"></i>&nbsp;Zonca</a></li>
@@ -130,7 +133,7 @@
                         <li><a href="http://blog.friparia.com/"><i class="icon-user"></i>&nbsp;Friparia</a></li>
                     </ul>
                 </div>
-               <div class="social .col-md-4">
+               <div class="social col-md-3">
                     <h3>Social</h3>
                     <ul class="unstyled">
                         <li><a href="https://github.com/nullne">Github</a></li>
@@ -139,9 +142,11 @@
                         <li><a href="http://weibo.com/nullne">微博</a></li>
                     </ul>
                 </div>
+               <div class="col-md-1">
+               </div>
             </div>
         </div>
-        <p class="copyleft">&copy; nullne 2013-2014</p>
+        <p class="copyleft">&copy; nullne 2013-2015</p>
     </footer>
     </div><!--wrapper-->
 </body>
