春宵一刻值50千金

--- a/archives.html
+++ b/archives.html
@@ -98,11 +98,12 @@
 </ul>
 <h3>July</h3>
 <ul>
-	<li><a href="golang/2015/first-glance-at-go.html">Golang</a></li>
+	<li><a href="golang/2015/first-glance-at-go.html">Golang 初学</a></li>
 </ul>
 <h3>August</h3>
 <ul>
 	<li><a href="ssh/2015/learning-ssh.html">SSH学习笔记</a></li>
+	<li><a href="ssh/2015/golang-fucked-up.html">Golang使用中碰到的几个坑</a></li>
 	<li><a href="ssh/2015/how-does-key-challenges-work.html">SSH学习笔记之--Key Challenge 如何工作</a></li>
 	<li><a href="ssh/2015/ssh-RFC.html">SSH学习笔记之--SSH RFC</a></li>
 	<li><a href="ssh/2015/ssh-agent.html">SSH学习笔记之--SSH-Agent</a></li>
