春宵一刻值51千金

--- a/archives.html
+++ b/archives.html
@@ -113,6 +113,10 @@
 	<li><a href="ssh/2015/ssh-tips.html">SSH学习笔记之--SSH 使用技巧</a></li>
 	<li><a href="ssh/2015/ssh-tunnel.html">SSH学习笔记之--SSH Tunnel</a></li>
 </ul>
+<h3>November</h3>
+<ul>
+	<li><a href="ssh/2015/golang-muls.html">Golang 实现ssh批量运行</a></li>
+</ul>
         </div>
         <div class="push"></div>
     </div><!--container-fluid-->
