--- a/tags.html
+++ b/tags.html
@@ -90,7 +90,7 @@
 	<li><a href="/tag/programming.html">Programming</a></li>
 	<li><a href="/tag/agent.html">Agent</a></li>
 	<li><a href="/tag/blog.html">blog</a></li>
-	<li><a href="/tag/golang.html">golang</a></li>
+	<li><a href="/tag/golang.html">Golang</a></li>
 	<li><a href="/tag/tunnel.html">tunnel</a></li>
 	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
 	<li><a href="/tag/ssh.html">SSH</a></li>
