春宵一刻值52千金

--- a/archives.html
+++ b/archives.html
@@ -103,7 +103,7 @@
 <h3>August</h3>
 <ul>
 	<li><a href="ssh/2015/learning-ssh.html">SSH学习笔记</a></li>
-	<li><a href="ssh/2015/golang-fucked-up.html">Golang使用中碰到的几个坑</a></li>
+	<li><a href="golang/2015/golang-fucked-up.html">Golang使用中碰到的几个坑</a></li>
 	<li><a href="ssh/2015/how-does-key-challenges-work.html">SSH学习笔记之--Key Challenge 如何工作</a></li>
 	<li><a href="ssh/2015/ssh-RFC.html">SSH学习笔记之--SSH RFC</a></li>
 	<li><a href="ssh/2015/ssh-agent.html">SSH学习笔记之--SSH-Agent</a></li>
@@ -115,7 +115,7 @@
 </ul>
 <h3>November</h3>
 <ul>
-	<li><a href="ssh/2015/golang-muls.html">Golang 实现ssh批量运行</a></li>
+	<li><a href="golang/2015/golang-muls.html">Golang 实现ssh批量运行</a></li>
 </ul>
         </div>
         <div class="push"></div>
