春宵一刻值56千金

--- a/archives.html
+++ b/archives.html
@@ -65,14 +65,14 @@
 
       <!-- pages -->
       <a class="item " href="/category/suo-sui.html">琐碎</a>
-      <a class="item " href="/category/ji-zhu-gai-bian-sheng-huo.html">技术改变生活</a>
+      <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
       <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
       <a class="item" href="/about.html">About</a>
     <div class="right item">
         <div class="ui small search">
             <div class="ui icon input">
-                <input class="prompt" type="text" placeholder="Search...">
+                <input class="prompt" type="text" placeholder="Find something...">
                 <i class="search icon"></i>
             </div>
         </div>
@@ -97,14 +97,14 @@
 
         <!-- pages -->
         <a class="item " href="/category/suo-sui.html">琐碎</a>
-        <a class="item " href="/category/ji-zhu-gai-bian-sheng-huo.html">技术改变生活</a>
+        <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
         <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
         <a class="item" href="/about.html">About</a>
         <div class="right item">
             <div class="ui small search">
                 <div class="ui icon input">
-                    <input class="prompt" type="text" placeholder="Search...">
+                    <input class="prompt" type="text" placeholder="Find something...">
                     <i class="search icon"></i>
                 </div>
             </div>
@@ -126,12 +126,12 @@
 <h2>2011</h2>
 <h3>November</h3>
 <ul>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2011/ARP-protocol.html">ARP protocol analysis</a></li>
+	<li><a href="hand-of-midas/2011/ARP-protocol.html">ARP protocol analysis</a></li>
 </ul>
 <h2>2014</h2>
 <h3>November</h3>
 <ul>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2014/real-attack-show-wifi-vulnerability.html">WIFI 热点欺骗</a></li>
+	<li><a href="hand-of-midas/2014/real-attack-show-wifi-vulnerability.html">WIFI 热点欺骗</a></li>
 	<li><a href="suo-sui/2014/build-and-remember-continued.html">建站续，附乱七八糟</a></li>
 </ul>
 <h2>2015</h2>
@@ -141,27 +141,29 @@
 </ul>
 <h3>July</h3>
 <ul>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/first-glance-at-go.html">Golang 初学</a></li>
+	<li><a href="hand-of-midas/2015/first-glance-at-go.html">Golang 初学</a></li>
 </ul>
 <h3>August</h3>
 <ul>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/learning-ssh.html">SSH学习笔记</a></li>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/how-does-key-challenges-work.html">SSH学习笔记之--Key Challenge 如何工作</a></li>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/ssh-RFC.html">SSH学习笔记之--SSH RFC</a></li>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/ssh-agent.html">SSH学习笔记之--SSH-Agent</a></li>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/ssh-agent-hijacking.html">SSH学习笔记之--Agent Hijacking</a></li>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/ssh-auth.html">SSH学习笔记之--SSH 认证</a></li>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/ssh-config-tips.html">SSH学习笔记之--SSH 配置技巧</a></li>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/ssh-tips.html">SSH学习笔记之--SSH 使用技巧</a></li>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/ssh-tunnel.html">SSH学习笔记之--SSH Tunnel</a></li>
-</ul>
-<h3>November</h3>
-<ul>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/golang-muls.html">Golang 实现ssh批量运行</a></li>
+	<li><a href="hand-of-midas/2015/learning-ssh.html">SSH学习笔记</a></li>
+	<li><a href="hand-of-midas/2015/how-does-key-challenges-work.html">SSH学习笔记之--Key Challenge 如何工作</a></li>
+	<li><a href="hand-of-midas/2015/ssh-RFC.html">SSH学习笔记之--SSH RFC</a></li>
+	<li><a href="hand-of-midas/2015/ssh-agent.html">SSH学习笔记之--SSH-Agent</a></li>
+	<li><a href="hand-of-midas/2015/ssh-agent-hijacking.html">SSH学习笔记之--Agent Hijacking</a></li>
+	<li><a href="hand-of-midas/2015/ssh-auth.html">SSH学习笔记之--SSH 认证</a></li>
+	<li><a href="hand-of-midas/2015/ssh-config-tips.html">SSH学习笔记之--SSH 配置技巧</a></li>
+	<li><a href="hand-of-midas/2015/ssh-tips.html">SSH学习笔记之--SSH 使用技巧</a></li>
+	<li><a href="hand-of-midas/2015/ssh-tunnel.html">SSH学习笔记之--SSH Tunnel</a></li>
 </ul>
 <h3>December</h3>
 <ul>
-	<li><a href="ji-zhu-gai-bian-sheng-huo/2015/chrome-extension-reimbursement-assistant.html">报销助手--Chrome插件</a></li>
+	<li><a href="hand-of-midas/2015/chrome-extension-reimbursement-assistant.html">报销助手--Chrome插件</a></li>
+</ul>
+<h2>2016</h2>
+<h3>June</h3>
+<ul>
+	<li><a href="suo-sui/2016/eight-weeks-in-Amoy.html">厦门八周</a></li>
+	<li><a href="hand-of-midas/2016/golang-muls.html">Golang 实现ssh批量运行</a></li>
 </ul>
 
   <div class="ui hidden divider"></div>
@@ -187,8 +189,15 @@
           </div>
         </div>
         <div class="seven wide column">
-          <h4 class="ui inverted header">Footer Header</h4>
-          <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+          <h4 class="ui inverted header">从前慢</h4>
+          <p>
+          从前的日色变得慢<br>
+          车，马，邮件都慢<br>
+          一生只够爱一个人</p>
+
+          <p>从前的锁也好看<br>
+          钥匙精美有样子<br>
+          你锁了 人家就懂了</p>
         </div>
       </div>
     </div>
