--- a/authors.html
+++ b/authors.html
@@ -65,14 +65,14 @@
 
       <!-- pages -->
       <a class="item " href="/category/suo-sui.html">琐碎</a>
-      <a class="item " href="/category/ji-zhu-gai-bian-sheng-huo.html">技术改变生活</a>
+      <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
       <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
       <a class="item" href="/about.html">About</a>
     <div class="right item">
         <div class="ui small search">
             <div class="ui icon input">
-                <input class="prompt" type="text" placeholder="Search...">
+                <input class="prompt" type="text" placeholder="Find something...">
                 <i class="search icon"></i>
             </div>
         </div>
@@ -97,14 +97,14 @@
 
         <!-- pages -->
         <a class="item " href="/category/suo-sui.html">琐碎</a>
-        <a class="item " href="/category/ji-zhu-gai-bian-sheng-huo.html">技术改变生活</a>
+        <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
         <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
         <a class="item" href="/about.html">About</a>
         <div class="right item">
             <div class="ui small search">
                 <div class="ui icon input">
-                    <input class="prompt" type="text" placeholder="Search...">
+                    <input class="prompt" type="text" placeholder="Find something...">
                     <i class="search icon"></i>
                 </div>
             </div>
@@ -125,7 +125,7 @@
 
     <h1>Authors on NULLNE</h1>
 
-    <ul>        <li><a href="/author/nullne.html">nullne</a> (16)</li>
+    <ul>        <li><a href="/author/nullne.html">nullne</a> (17)</li>
     </ul>
 
   <div class="ui hidden divider"></div>
@@ -151,8 +151,15 @@
           </div>
         </div>
         <div class="seven wide column">
-          <h4 class="ui inverted header">Footer Header</h4>
-          <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+          <h4 class="ui inverted header">从前慢</h4>
+          <p>
+          从前的日色变得慢<br>
+          车，马，邮件都慢<br>
+          一生只够爱一个人</p>
+
+          <p>从前的锁也好看<br>
+          钥匙精美有样子<br>
+          你锁了 人家就懂了</p>
         </div>
       </div>
     </div>
