--- a/tags.html
+++ b/tags.html
@@ -65,14 +65,14 @@
 
       <!-- pages -->
       <a class="item " href="/category/suo-sui.html">琐碎</a>
-      <a class="item " href="/category/ji-zhu-gai-bian-sheng-huo.html">技术改变生活</a>
+      <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
       <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
       <a class="item" href="/about.html">About</a>
     <div class="right item">
         <div class="ui small search">
             <div class="ui icon input">
-                <input class="prompt" type="text" placeholder="Search...">
+                <input class="prompt" type="text" placeholder="Find something...">
                 <i class="search icon"></i>
             </div>
         </div>
@@ -97,14 +97,14 @@
 
         <!-- pages -->
         <a class="item " href="/category/suo-sui.html">琐碎</a>
-        <a class="item " href="/category/ji-zhu-gai-bian-sheng-huo.html">技术改变生活</a>
+        <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
         <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
         <a class="item" href="/about.html">About</a>
         <div class="right item">
             <div class="ui small search">
                 <div class="ui icon input">
-                    <input class="prompt" type="text" placeholder="Search...">
+                    <input class="prompt" type="text" placeholder="Find something...">
                     <i class="search icon"></i>
                 </div>
             </div>
@@ -125,26 +125,27 @@
 
 <ul>
 	<li><a href="/tag/arp.html">Arp</a></li>
-	<li><a href="/tag/rfc.html">RFC</a></li>
-	<li><a href="/tag/wifi.html">WIFI</a></li>
-	<li><a href="/tag/key-challenge.html">Key Challenge</a></li>
-	<li><a href="/tag/config.html">config</a></li>
+	<li><a href="/tag/lu-you.html">旅游</a></li>
 	<li><a href="/tag/work.html">work</a></li>
-	<li><a href="/tag/programming.html">Programming</a></li>
+	<li><a href="/tag/agent.html">Agent</a></li>
+	<li><a href="/tag/golang.html">Golang</a></li>
+	<li><a href="/tag/linux.html">Linux</a></li>
+	<li><a href="/tag/tutorial.html">Tutorial</a></li>
+	<li><a href="/tag/key-challenge.html">Key Challenge</a></li>
+	<li><a href="/tag/blog.html">blog</a></li>
+	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
+	<li><a href="/tag/tips.html">tips</a></li>
+	<li><a href="/tag/config.html">config</a></li>
+	<li><a href="/tag/wireshark.html">wireshark</a></li>
 	<li><a href="/tag/chrome-extension.html">Chrome-Extension</a></li>
 	<li><a href="/tag/js.html">js</a></li>
-	<li><a href="/tag/golang.html">Golang</a></li>
-	<li><a href="/tag/tunnel.html">tunnel</a></li>
-	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
 	<li><a href="/tag/ssh.html">SSH</a></li>
-	<li><a href="/tag/agent.html">Agent</a></li>
-	<li><a href="/tag/linux.html">Linux</a></li>
-	<li><a href="/tag/blog.html">blog</a></li>
-	<li><a href="/tag/tips.html">tips</a></li>
-	<li><a href="/tag/wireshark.html">wireshark</a></li>
-	<li><a href="/tag/auth.html">Auth</a></li>
-	<li><a href="/tag/tutorial.html">Tutorial</a></li>
+	<li><a href="/tag/tunnel.html">tunnel</a></li>
+	<li><a href="/tag/wifi.html">WIFI</a></li>
+	<li><a href="/tag/programming.html">Programming</a></li>
+	<li><a href="/tag/rfc.html">RFC</a></li>
 	<li><a href="/tag/anget-hijacking.html">anget hijacking</a></li>
+	<li><a href="/tag/auth.html">Auth</a></li>
 </ul>
 
   <div class="ui hidden divider"></div>
@@ -170,8 +171,15 @@
           </div>
         </div>
         <div class="seven wide column">
-          <h4 class="ui inverted header">Footer Header</h4>
-          <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+          <h4 class="ui inverted header">从前慢</h4>
+          <p>
+          从前的日色变得慢<br>
+          车，马，邮件都慢<br>
+          一生只够爱一个人</p>
+
+          <p>从前的锁也好看<br>
+          钥匙精美有样子<br>
+          你锁了 人家就懂了</p>
         </div>
       </div>
     </div>
