春宵一刻值57千金

--- a/archives.html
+++ b/archives.html
@@ -160,9 +160,9 @@
 	<li><a href="hand-of-midas/2015/chrome-extension-reimbursement-assistant.html">报销助手--Chrome插件</a></li>
 </ul>
 <h2>2016</h2>
-<h3>June</h3>
+<h3>July</h3>
 <ul>
-	<li><a href="suo-sui/2016/eight-weeks-in-Amoy.html">厦门八周</a></li>
+	<li><a href="dear-diary/2016/eight-weeks-in-Amoy.html"><i class="lock icon"></i> 厦门八周</a></li>
 	<li><a href="hand-of-midas/2016/golang-muls.html">Golang 实现ssh批量运行</a></li>
 </ul>
 
