--- a/about.html
+++ b/about.html
@@ -28,6 +28,12 @@
   <script>
   $(document)
     .ready(function() {
+        // change copyleft
+        var now = new Date();
+        var copyleft = $('.copyleft').html().replace(/2013.*/, "2013 - " + now.getFullYear());
+        $('.copyleft').html(copyleft)
+
+
         $('div.search').keypress(function(e) {
             if(e.which == 13) {
                 var q = $(this).find('input').val()
@@ -164,10 +170,11 @@
     </div>
       <div class="ui inverted section divider"></div>
       <div class="ui centered align grid">
-          <p class="copyleft">&copy; nullne 2013-2016</p>
+          <p class="copyleft">&copy; nullne 2013-</p>
       </div>
   </div>
 </div>
+
 
 </body>
 
