春宵一刻值62千金

--- a/about.html
+++ b/about.html
@@ -156,15 +156,26 @@
           </div>
         </div>
         <div class="seven wide column">
-          <h4 class="ui inverted header">从前慢</h4>
-          <p>
-          从前的日色变得慢<br>
-          车，马，邮件都慢<br>
-          一生只够爱一个人</p>
-
-          <p>从前的锁也好看<br>
-          钥匙精美有样子<br>
-          你锁了 人家就懂了</p>
+                <div class="poem head">从前慢</div>
+                <div class="poem"><br>木心</div>
+            　　<div class="poem">&nbsp;</div>
+                <div class="poem">记得早先少年时</div>
+            　　<div class="poem">&nbsp;</div>
+                <div class="poem">大家诚诚恳恳</div>
+            　　<div class="poem">说一句 是一句</div>
+            　　<div class="poem">&nbsp;</div>
+            　　<div class="poem">清早上火车站</div>
+            　　<div class="poem">长街黑暗无行人</div>
+            　　<div class="poem">卖豆浆的小店冒着热气</div>
+            　　<div class="poem">&nbsp;</div>
+            　　<div class="poem">从前的日色变得慢</div>
+            　　<div class="poem">车<br>，马<br>，邮件都慢</div>
+            　　<div class="poem">一生只够爱一个人</div>
+            　　<div class="poem">&nbsp;</div>
+            　　<div class="poem">从前的锁也好看</div>
+            　　<div class="poem">钥匙精美有样子 </div>
+            　　<div class="poem">你锁了 人家就懂</div>
+                <div class="clear"></div>
         </div>
       </div>
     </div>
