春宵一刻值70千金

--- a/draft/golang-muls.html
+++ b/draft/golang-muls.html
@@ -161,7 +161,7 @@ $(document)
               <div class="content">
                   <a href="/about.html" class="header">nullne</a>
                   <div class="meta">
-                      <span class="date">Jul 4, 2016</span>
+                      <span class="date">Jul 5, 2016</span>
                   </div>
               </div>
               <div class="extra content">
@@ -279,7 +279,7 @@ poll();
 gapi.comments.render('comments', {
     href: window.location,
     width: 624,
-    height: 250,
+    height: '250px',
     first_party_property: 'BLOGGER',
     view_type: 'FILTERED_POSTMOD'
 });
