春宵一刻值76千金

--- a/archives.html
+++ b/archives.html
@@ -168,6 +168,7 @@
 <h2>2016</h2>
 <h3>July</h3>
 <ul>
+	<li><a href="suo-sui/2016/ingress.html">Ingress -- 七天升八小记</a></li>
 	<li><a href="dear-diary/2016/eight-weeks-in-Amoy.html"><i class="lock icon"></i> 厦门八周</a></li>
 </ul>
 
