--- a/draft/solitary.html
+++ b/draft/solitary.html
@@ -161,7 +161,7 @@ $(document)
               <div class="content">
                   <a href="/about.html" class="header">nullne</a>
                   <div class="meta">
-                      <span class="date">Jul 7, 2016</span>
+                      <span class="date">Jul 25, 2016</span>
                   </div>
               </div>
               <div class="extra content">
@@ -173,7 +173,19 @@ $(document)
           </div>
       </div>
   </div>
-  <div class="ui text container"></div>
+  <div class="ui text container"><p>很奇怪的书写方式，面对屏幕进行写作。嗯，一个人在二十多岁碌碌无为的时候最好的噱头是安插作家的头衔，哪怕只是写了一两行，代码！</p>
+<p>现在要做的事情就是强迫自己进行写作，恩竟然是写作。因为你现在的表达能力极其差。你需要看很多的书来提高自己的写作能力。</p>
+<p>刚刚看完了诺兰的一部叫做 Following 的电影，还是蛮不错的。</p>
+<p>故事讲的是一个无聊到爆的作家跟踪一些自己感兴趣的人来排遣寂寞。生活平淡如水，一直到某一天让被跟踪的对象发现了，他是一个贼。</p>
+<p>这个贼行窃风格鲜明，每次偷东西的时候都会先在主人家里找一个包用来装赃物。除了拿一些值钱的物品外还会偷一些奇怪的东西，女人的内衣，磁带，不一而论。对了他会带一个锤子在身边备用。</p>
+<p>这个贼拉他入伙，并把自己的技俩全都教给了他。</p>
+<p>在这期间他跟踪了一个模特，一个黑社会大哥的马子。几次尾随之后他喜欢上了这个模特，并逐渐泡上了这个女人。</p>
+<p>当他来了这个模特家里才发现之前有来这儿作过案，心里非常愧疚。于是把偷得东西又还给了她，并向她坦白了一切。随着俩人关系进一步升温，这个模特告诉他自己想摆脱黑帮大哥的控制，但是自己的一些不文雅的照片被作为把柄锁在大哥的保险柜里。她想让他帮自己拿回装这些照片的信封，并嘱咐一定不要打开。</p>
+<p>他那么喜欢她，义无反顾的去了。打开了保险柜，拿到了照片，还有一大堆钱。不幸的是他被人发现了，无奈之下挥起锤子杀了这个目击者。他拿着装有裸照的信封，按捺不住便打开了，发现不过是一些艺术照而已。他被骗了。</p>
+<p>他怒气冲冲的去找模特理论，模特向他坦白，其实之前的那个贼是自己的情人，因为卷进了一起谋杀案需要找一个替罪羊，说的再具体一点，一个转移视线的人。正好他，一个无业游民，闯进了他们的视野。于是他们就密谋了一系列。现在警方就会发现还有另外一个有相同作案手法的犯罪分子逍遥法外。</p>
+<p>他非常生气，迫不及待的去警察局自首。到了之后被告知这个女人已经死了，是被同一把锤子砸死的，这把锤子上除了这个女人的血之外，还有一个保安的血。警方怀疑他为了偷保险柜里面的钱而向模特索取密码，之后杀人灭口。</p>
+<p>所以，故事最开始出现的那个贼，是黑帮大哥雇来杀死这个女人的 -- 一定要干净利落。</p>
+<p>电影在剪辑方面也值得一提。很多电影都会把原先正常的叙事顺序打乱，至于乱成什么样子则各有不同。</p></div>
 </div>
 <div class="ui hidden divider"></div>
 
