春宵一刻值77千金

--- a/tags.html
+++ b/tags.html
@@ -132,6 +132,7 @@
 <ul>
 	<li><a href="/tag/arp.html">Arp</a></li>
 	<li><a href="/tag/lu-you.html">旅游</a></li>
+	<li><a href="/tag/ingress.html">Ingress</a></li>
 	<li><a href="/tag/work.html">work</a></li>
 	<li><a href="/tag/agent.html">Agent</a></li>
 	<li><a href="/tag/linux.html">Linux</a></li>
@@ -141,16 +142,16 @@
 	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
 	<li><a href="/tag/tips.html">tips</a></li>
 	<li><a href="/tag/config.html">config</a></li>
-	<li><a href="/tag/wireshark.html">wireshark</a></li>
+	<li><a href="/tag/anget-hijacking.html">anget hijacking</a></li>
 	<li><a href="/tag/chrome-extension.html">Chrome-Extension</a></li>
 	<li><a href="/tag/js.html">js</a></li>
 	<li><a href="/tag/ssh.html">SSH</a></li>
-	<li><a href="/tag/lu-you-ingress-amoy.html">旅游 Ingress Amoy</a></li>
 	<li><a href="/tag/tunnel.html">tunnel</a></li>
 	<li><a href="/tag/wifi.html">WIFI</a></li>
 	<li><a href="/tag/programming.html">Programming</a></li>
 	<li><a href="/tag/rfc.html">RFC</a></li>
-	<li><a href="/tag/anget-hijacking.html">anget hijacking</a></li>
+	<li><a href="/tag/amoy.html">Amoy</a></li>
+	<li><a href="/tag/wireshark.html">wireshark</a></li>
 	<li><a href="/tag/auth.html">Auth</a></li>
 </ul>
 
