春宵一刻值79千金

--- a/archives.html
+++ b/archives.html
@@ -71,6 +71,7 @@
 
       <!-- pages -->
       <a class="item " href="/category/suo-sui.html">琐碎</a>
+      <a class="item " href="/category/million.html">million</a>
       <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
       <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
@@ -103,6 +104,7 @@
 
         <!-- pages -->
         <a class="item " href="/category/suo-sui.html">琐碎</a>
+        <a class="item " href="/category/million.html">million</a>
         <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
         <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
@@ -166,10 +168,11 @@
 	<li><a href="hand-of-midas/2015/chrome-extension-reimbursement-assistant.html">报销助手--Chrome插件</a></li>
 </ul>
 <h2>2016</h2>
-<h3>July</h3>
+<h3>November</h3>
 <ul>
-	<li><a href="dear-diary/2016/eight-weeks-in-Amoy.html"><i class="lock icon"></i> 厦门八周</a></li>
+	<li><a href="million/2016/untitled.html">Untitled</a></li>
 	<li><a href="suo-sui/2016/ingress.html">Ingress -- 七天升八小记</a></li>
+	<li><a href="dear-diary/2016/eight-weeks-in-Amoy.html"><i class="lock icon"></i> 厦门八周</a></li>
 </ul>
 
   <div class="ui hidden divider"></div>
