--- a/about.html
+++ b/about.html
@@ -74,6 +74,7 @@
 
       <!-- pages -->
       <a class="item " href="/category/suo-sui.html">琐碎</a>
+      <a class="item " href="/category/million.html">million</a>
       <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
       <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
@@ -106,6 +107,7 @@
 
         <!-- pages -->
         <a class="item " href="/category/suo-sui.html">琐碎</a>
+        <a class="item " href="/category/million.html">million</a>
         <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
         <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
