--- a/authors.html
+++ b/authors.html
@@ -71,6 +71,7 @@
 
       <!-- pages -->
       <a class="item " href="/category/suo-sui.html">琐碎</a>
+      <a class="item " href="/category/million.html">million</a>
       <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
       <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
@@ -103,6 +104,7 @@
 
         <!-- pages -->
         <a class="item " href="/category/suo-sui.html">琐碎</a>
+        <a class="item " href="/category/million.html">million</a>
         <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
         <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
@@ -131,7 +133,7 @@
 
     <h1>Authors on NULLNE</h1>
 
-    <ul>        <li><a href="/author/nullne.html">nullne</a> (17)</li>
+    <ul>        <li><a href="/author/nullne.html">nullne</a> (18)</li>
     </ul>
 
   <div class="ui hidden divider"></div>
