--- a/categories.html
+++ b/categories.html
@@ -71,6 +71,7 @@
 
       <!-- pages -->
       <a class="item " href="/category/suo-sui.html">琐碎</a>
+      <a class="item " href="/category/million.html">million</a>
       <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
       <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
@@ -103,6 +104,7 @@
 
         <!-- pages -->
         <a class="item " href="/category/suo-sui.html">琐碎</a>
+        <a class="item " href="/category/million.html">million</a>
         <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
         <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
@@ -131,6 +133,7 @@
 
 <ul>
 	<li><a href="/category/suo-sui.html">琐碎</a></li>
+	<li><a href="/category/million.html">million</a></li>
 	<li><a href="/category/hand-of-midas.html">Hand of Midas</a></li>
 	<li><a href="/category/dear-diary.html">Dear Diary</a></li>
 </ul>
