--- a/search.html
+++ b/search.html
@@ -86,6 +86,7 @@ $(document).ready(function() {
 
       <!-- pages -->
       <a class="item " href="/category/suo-sui.html">琐碎</a>
+      <a class="item " href="/category/million.html">million</a>
       <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
       <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
@@ -118,6 +119,7 @@ $(document).ready(function() {
 
         <!-- pages -->
         <a class="item " href="/category/suo-sui.html">琐碎</a>
+        <a class="item " href="/category/million.html">million</a>
         <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
         <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
