春宵一刻值82千金

--- a/archives.html
+++ b/archives.html
@@ -74,7 +74,9 @@
       <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
       <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
-      <a class="item" href="/about.html">About</a>
+
+      <a class="item" href="">About</a>
+
     <div class="right item">
         <div class="ui small search">
             <div class="ui icon input">
@@ -106,7 +108,9 @@
         <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
         <a class="item " href="/category/dear-diary.html">Dear Diary</a>
 
-        <a class="item" href="/about.html">About</a>
+
+        <a class="item" href="">About</a>
+
         <div class="right item">
             <div class="ui small search">
                 <div class="ui icon input">
@@ -165,11 +169,11 @@
 <ul>
 	<li><a href="hand-of-midas/2015/chrome-extension-reimbursement-assistant.html">报销助手--Chrome插件</a></li>
 </ul>
-<h2>2016</h2>
-<h3>November</h3>
+<h2>2017</h2>
+<h3>January</h3>
 <ul>
-	<li><a href="dear-diary/2016/eight-weeks-in-Amoy.html"><i class="lock icon"></i> 厦门八周</a></li>
-	<li><a href="suo-sui/2016/ingress.html">Ingress -- 七天升八小记</a></li>
+	<li><a href="dear-diary/2017/eight-weeks-in-Amoy.html"><i class="lock icon"></i> 厦门八周</a></li>
+	<li><a href="suo-sui/2017/ingress.html">Ingress -- 七天升八小记</a></li>
 </ul>
 
   <div class="ui hidden divider"></div>
