--- a/draft/solitary.html
+++ b/draft/solitary.html
@@ -23,22 +23,6 @@
 
   <script src="/theme/jquery-2.1.4.min.js"></script>
   <script src="/theme/semantic.min.js"></script>
-<script>
-$(document)
-    .ready(function() {
-        $('.card .dimmer')
-            .dimmer({
-                on: 'hover'
-            })
-        ;
-        $('.ui.sticky')
-            .sticky({
-                context: '#allude',
-                offset: 63,
-            })
-        ;
-    });
-</script>
   <script>
   $(document)
     .ready(function() {
@@ -91,7 +75,9 @@ $(document)
       <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
       <a class="item  active" href="/category/dear-diary.html">Dear Diary</a>
 
-      <a class="item" href="/about.html">About</a>
+
+      <a class="item" href="">About</a>
+
     <div class="right item">
         <div class="ui small search">
             <div class="ui icon input">
@@ -123,7 +109,9 @@ $(document)
         <a class="item " href="/category/hand-of-midas.html">Hand of Midas</a>
         <a class="item  active" href="/category/dear-diary.html">Dear Diary</a>
 
-        <a class="item" href="/about.html">About</a>
+
+        <a class="item" href="">About</a>
+
         <div class="right item">
             <div class="ui small search">
                 <div class="ui icon input">
@@ -146,34 +134,7 @@ $(document)
   <div class="ui hidden divider"></div>
 
 <div class="ui basic segment" id="allude" style="">
-  <div class="right ui rail" style="">
-      <div class="ui sticky" style="">
-          <div class="ui card">
-              <div class="ui slide right reveal image">
-                  <div class="visible content">
-                      <img class="ui fluid image" src="/theme/img/big-avatar.jpg">
-                  </div>
-                  <div class="hidden content">
-                      <img class="ui fluid image" src="/theme/img/alipay.png">
-                  </div>
-              </div>
-
-              <div class="content">
-                  <a href="/about.html" class="header">nullne</a>
-                  <div class="meta">
-                      <span class="date">Nov 21, 2016</span>
-                  </div>
-              </div>
-              <div class="extra content">
- 
-                  Tags:&nbsp;
-                  <a href="/tag/solitary.html" class="">solitary</a>,&nbsp;
- 
-              </div>
-          </div>
-      </div>
-  </div>
-  <div class="ui text container"><p>很奇怪的书写方式，面对屏幕进行写作。嗯，一个人在二十多岁碌碌无为的时候最好的噱头是安插作家的头衔，哪怕只是写了一两行，代码！</p>
+  <div class="ui container"><p>很奇怪的书写方式，面对屏幕进行写作。嗯，一个人在二十多岁碌碌无为的时候最好的噱头是安插作家的头衔，哪怕只是写了一两行，代码！</p>
 <p>现在要做的事情就是强迫自己进行写作，恩竟然是写作。因为你现在的表达能力极其差。你需要看很多的书来提高自己的写作能力。</p>
 <p>刚刚看完了诺兰的一部叫做 Following 的电影，还是蛮不错的。</p>
 <p>故事讲的是一个无聊到爆的作家跟踪一些自己感兴趣的人来排遣寂寞。生活平淡如水，一直到某一天让被跟踪的对象发现了，他是一个贼。</p>
