春宵一刻值83千金

--- a/draft/solitary.html
+++ b/draft/solitary.html
@@ -125,7 +125,7 @@
 
     <div class="ui text container">
 <h1 class="ui inverted header">
-    Capital Solitary
+    Following
 </h1>
     </div>
 
