--- a/archives.html
+++ b/archives.html
@@ -169,10 +169,18 @@
 <ul>
 	<li><a href="hand-of-midas/2015/chrome-extension-reimbursement-assistant.html">报销助手--Chrome插件</a></li>
 </ul>
+<h2>2016</h2>
+<h3>July</h3>
+<ul>
+	<li><a href="dear-diary/2016/eight-weeks-in-Amoy.html"><i class="lock icon"></i> 厦门八周</a></li>
+</ul>
+<h3>September</h3>
+<ul>
+	<li><a href="dear-diary/2016/run-away-from-Beijing.html"><i class="lock icon"></i> 从北京逃离和灰溜溜的回来</a></li>
+</ul>
 <h2>2017</h2>
 <h3>January</h3>
 <ul>
-	<li><a href="dear-diary/2017/eight-weeks-in-Amoy.html"><i class="lock icon"></i> 厦门八周</a></li>
 	<li><a href="suo-sui/2017/ingress.html">Ingress -- 七天升八小记</a></li>
 </ul>
 
