春宵一刻值87千金

--- a/tags.html
+++ b/tags.html
@@ -143,6 +143,7 @@
 	<li><a href="/tag/tutorial.html">Tutorial</a></li>
 	<li><a href="/tag/key-challenge.html">Key Challenge</a></li>
 	<li><a href="/tag/blog.html">blog</a></li>
+	<li><a href="/tag/camera.html">camera</a></li>
 	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
 	<li><a href="/tag/tips.html">tips</a></li>
 	<li><a href="/tag/config.html">config</a></li>
