春宵一刻值88千金

--- a/archives.html
+++ b/archives.html
@@ -184,6 +184,11 @@
 <ul>
 	<li><a href="hand-of-midas/2018/auto-camera.html">Auto camera</a></li>
 </ul>
+<h2>2019</h2>
+<h3>August</h3>
+<ul>
+	<li><a href="hand-of-midas/2019/bri-ideas.html">Brilliant Ideas</a></li>
+</ul>
 
   <div class="ui hidden divider"></div>
 
