--- a/tags.html
+++ b/tags.html
@@ -142,6 +142,7 @@
 	<li><a href="/tag/linux.html">Linux</a></li>
 	<li><a href="/tag/tutorial.html">Tutorial</a></li>
 	<li><a href="/tag/key-challenge.html">Key Challenge</a></li>
+	<li><a href="/tag/ideas.html">ideas</a></li>
 	<li><a href="/tag/blog.html">blog</a></li>
 	<li><a href="/tag/camera.html">camera</a></li>
 	<li><a href="/tag/zhao-gong-zuo.html">找工作</a></li>
